// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageSidebar renders 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="PicassoContainer-flex PicassoContainer-column PageSidebar-root PageSidebar-light PageSidebar-medium PageSidebar-hamburgerNotAvailable"
    >
      <div
        class="PageSidebar-wrapper PageSidebar-sticky"
      >
        <div
          class="PicassoContainer-flex PicassoContainer-column PageSidebar-scrollableContent"
        >
          <div
            class="PageSidebar-spacer"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PageSidebar with menu 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="PicassoContainer-flex PicassoContainer-column PageSidebar-root PageSidebar-light PageSidebar-medium PageSidebar-hamburgerNotAvailable"
    >
      <div
        class="PageSidebar-wrapper PageSidebar-sticky"
      >
        <div
          class="PicassoContainer-flex PicassoContainer-column PageSidebar-scrollableContent"
        >
          <div
            class="PageSidebar-spacer"
          />
          <ul
            class="relative list-none outline-none py-2 px-0 m-0 rounded-sm shadow-0 order-1 [&_&]:flex-1 flex-grow flex-shrink max-w"
            role="menu"
            tabindex="-1"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PageSidebar with one normal and one bottom menu 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="PicassoContainer-flex PicassoContainer-column PageSidebar-root PageSidebar-light PageSidebar-medium PageSidebar-hamburgerNotAvailable"
    >
      <div
        class="PageSidebar-wrapper PageSidebar-sticky"
      >
        <div
          class="PicassoContainer-flex PicassoContainer-column PageSidebar-scrollableContent"
        >
          <div
            class="PageSidebar-spacer"
          />
          <ul
            class="relative list-none outline-none py-2 px-0 m-0 rounded-sm shadow-0 order-1 [&_&]:flex-1 flex-grow flex-shrink max-w"
            role="menu"
            tabindex="-1"
          />
          <ul
            class="relative list-none outline-none py-2 px-0 m-0 rounded-sm shadow-0 [&_&]:flex-1 flex-grow flex-shrink max-w order-[99]"
            role="menu"
            tabindex="-1"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
